<?xml version="1.0" encoding="utf-8"?>

<ScrollView 	xmlns:android="http://schemas.android.com/apk/res/android"
    			xmlns:tools="http://schemas.android.com/tools"
         		android:layout_width="match_parent"
        		android:layout_height="wrap_content">

	<LinearLayout   
	    			android:layout_width="match_parent"
	    			android:layout_height="wrap_content"
	    			android:orientation="vertical"
	    			
	    			android:paddingBottom="@dimen/activity_vertical_margin"
	    			android:paddingLeft="@dimen/activity_horizontal_margin"
	    			android:paddingRight="@dimen/activity_horizontal_margin"
	    			android:paddingTop="@dimen/activity_vertical_margin"
	    			tools:context=".FirstActivity">    			
    
	    	<EditText   android:id="@+id/activity1_edit_name"
	        			android:layout_width="match_parent"
	        			android:layout_height="wrap_content"        		
	        			android:hint="@string/activity1_edit_name"
	        			android:inputType="textCapWords"/>
	        
	       	<Button    	android:id="@+id/activity1_edit_birthdate"
						android:layout_width="match_parent" 
		        		android:layout_height="wrap_content"
		        		android:hint="@string/activity1_edit_birthdate"
		        		style="?android:attr/spinnerStyle"
		        		android:paddingLeft="12dp"	        		
		        		android:onClick="showDatePickerDialog"
		        		android:textSize="18sp"/> 
	
		    <TextView   android:id="@+id/activity1_text_sex"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:paddingLeft="12dp"
				        android:hint="@string/activity1_text_sex" 
				        android:textSize="18sp"/>
	        
	        <Spinner    android:id="@+id/activity1_edit_sex"
						android:layout_width="match_parent" 
		        		android:layout_height="wrap_content"/>
	        
	        <EditText   android:id="@+id/activity1_edit_position"
						android:layout_width="match_parent" 
		        		android:layout_height="wrap_content"        		
		        		android:hint="@string/activity1_edit_position"
		        		android:inputType="textCapSentences"/>
	        
	        <EditText   android:id="@+id/activity1_edit_salary"
						android:layout_width="match_parent" 
		        		android:layout_height="wrap_content"        		
		        		android:hint="@string/activity1_edit_salary"
		        		android:inputType="number"/>
	        
	        <EditText   android:id="@+id/activity1_edit_phonenumber"
						android:layout_width="match_parent" 
		        		android:layout_height="wrap_content"        		
		        		android:hint="@string/activity1_edit_phonenumber"
		        		android:inputType="phone"/>
	        
	        <EditText   android:id="@+id/activity1_edit_email"
						android:layout_width="match_parent" 
		        		android:layout_height="wrap_content"        		
		        		android:hint="@string/activity1_edit_email"
		        		android:inputType="textEmailAddress"/>
	    
		    <Button 	android:id="@+id/activity1_ButtonSendCV"
		        		android:layout_width="match_parent"
		        		android:layout_height="wrap_content"
		        		android:text="@string/activity1_button_send_cv"
		        		android:onClick="activity1_ButtonSendCV" />
	    
	</LinearLayout>
</ScrollView>